--- a/XuanYuan/Class2.0/Main/数据库模型(model)/kindList.plist
+++ b/XuanYuan/Class2.0/Main/数据库模型(model)/kindList.plist
@@ -16,7 +16,7 @@
 		<key>k_id</key>
 		<string>niesiyang_1</string>
 		<key>kindName</key>
-		<string>备注</string>
+		<string>安全备注</string>
 	</dict>
 </array>
 </plist>
